# med-image_index

./: .gitignore  README.md  cli.py  index_tcia.py  pixi.toml  pyproject.toml
.github/workflows/: release_indexed_datasets.yml
docs/: UPDATING_INDEX.md
src/imgindex/: index.py  model.py  parquet.py  pyproject.toml
src/imgindex/imgindex/: __init__.py  model.py  parquet.py
src/imgindex/tcia/: index.py  new_index.py  utils.py
src/imgindex/utils/: tcia_api.py
workflow/notebooks/: AMOS.ipynb  HCUCH-recist-dataset.ipynb  LiverHccSeg.ipynb  MSWAL.ipynb  MedicalDecathalon.ipynb
workflow/scripts/: create_index_dicom.py  create_new_release.py  index_dry_run.py  index_tcia.py  new_index_csv_to_parquet.py
