[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "med-image-index"
version = "0.1.0"
description = "Add your description here"
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = [
    "med-imagenet",
    "med-imagetools",
    "pandera>=0.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["imgindex"]

[tool.uv.sources]
med-imagetools = { git = "https://github.com/bhklab/med-imagetools.git", rev = "JoshuaSiraj/nifti-index" }
med-imagenet = { git = "https://github.com/bhklab/med-imagenet.git" }
